--- a/Core/CubyTower.Core.csproj
+++ b/Core/CubyTower.Core.csproj
@@ -88,10 +88,16 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="Assets\AboutFuseeAssets.txt" />
+    <Content Include="Assets\blue_poly.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\gras.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\himmel.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\justBlack.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\Leaves.jpg">
